styles.css
#bar-tooltip, #point-tooltip, #district-tooltip  {
    position: absolute;
    pointer-events: none;
}

.crimePoints {
    pointer-events: none;
}

body {
    padding: 2em;
}

.bar-viz {
    padding: 2em;
    overflow: visible !important;
    box-sizing: initial !important;
}

.row {
    width: 100%;
    display: flex;
    flex-direction: row;
    margin-left: 0;
    margin-right: 0;
}

.column {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 50%;
}

.tooltipp {
    margin: 0,0,0,0;
}

.nav-link, .district {
    cursor: pointer;
}

h1 {
    padding-left: 0;
}

.italics {
    font-style: italic;
}

